--- a/pom.xml
+++ b/pom.xml
@@ -6,15 +6,21 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
-		<!-- spring版本号 -->
-		<spring.version>3.2.3.RELEASE</spring.version>
 		<!-- mybatis版本号 -->
 		<mybatis.version>3.2.7</mybatis.version>
 		<!-- log4j日志文件管理包版本 -->
-		<slf4j.version>1.7.5</slf4j.version>
 		<log4j.version>1.2.16</log4j.version>
 		<jackson.version>2.2.0</jackson.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<spring.version>4.1.6.RELEASE</spring.version>
+		<slf4j.version>1.7.12</slf4j.version>
+		<logback.version>1.1.2</logback.version>
 		<httpClient.version>4.3.3</httpClient.version>
+		<nqsClient.version>1.3.4.zsy</nqsClient.version>
+		<janino.version>2.7.8</janino.version>
+		<itext.pdf.version>5.5.9</itext.pdf.version>
+		<pdfbox.version>2.0.3</pdfbox.version>
 		<package.environment>prod</package.environment>
 	</properties>
 
@@ -293,6 +299,54 @@
 			<artifactId>jxls-reader</artifactId>
 			<version>1.0.6</version>
 		</dependency>
+		<!-- apache commons -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.1</version>
+		</dependency>
+		<!-- guaua -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>15.0</version>
+		</dependency>
+
+		<!-- dubbo -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>dubbo</artifactId>
+			<version>2.5.3</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>netty</artifactId>
+					<groupId>org.jboss.netty</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>spring</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<!-- hessian -->
+		<dependency>
+			<groupId>com.caucho</groupId>
+			<artifactId>hessian</artifactId>
+			<version>4.0.7</version>
+		</dependency>
+		<!-- netease nkv -->
+		<dependency>
+			<groupId>netease</groupId>
+			<artifactId>nkv</artifactId>
+			<version>2.1.1</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
 	</dependencies>
 
 </project>
