--- a/pom.xml
+++ b/pom.xml
@@ -364,6 +364,29 @@
 			<version>3.5.3</version>
 		</dependency>
 
+		<!-- word to html -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-scratchpad</artifactId>
+			<version>3.8</version>
+		</dependency>
+		<dependency>
+			<groupId> fr.opensagres.xdocreport</groupId>
+			<artifactId> org.apache.poi.xwpf.converter.core</artifactId>
+			<version> 1.0.4</version>
+		</dependency>
+		<dependency>
+			<groupId> fr.opensagres.xdocreport</groupId>
+			<artifactId> org.apache.poi.xwpf.converter.xhtml</artifactId>
+			<version> 1.0.4</version>
+		</dependency>
+		<!-- poi -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.10.1</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
