--- a/pom.xml
+++ b/pom.xml
@@ -311,6 +311,12 @@
 			<artifactId>guava</artifactId>
 			<version>15.0</version>
 		</dependency>
+	
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>2.2.1</version>
+		</dependency>
 
 		<!-- dubbo -->
 		<dependency>
